tests/ui/type-alias-impl-trait/nested-tait-inference2.next.stderr
error[E0284]: type annotations needed: cannot satisfy `impl Foo<FooX> == ()`
  --> $DIR/nested-tait-inference2.rs:20:5
   |
LL |     ()
   |     ^^ cannot satisfy `impl Foo<FooX> == ()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
